# Evernote

./: .gitignore  LICENSE  README.md
.github/workflows/: go_test_coverage.yml  main.yml
Android/dex_checker/: settings.gradle
Android/empty-app/: settings.gradle
Android/empty-app/app/: build.gradle
Android/jetpack-compose-example/app/: build.gradle
Android/nanoscope-app/: settings.gradle
Android/nanoscope-app/app/: build.gradle
Android/trace-id/: settings.gradle
Aosp/: README.md  clion_project_generator.sh
Aosp/development/: excluded-paths
Build_Compiler/CMake/tutorial/: tutorial.cxx
Build_Compiler/Clang/: t.c
Build_Compiler/x86/: test_cmp.c  test_cmp.s
DevHub/CodeProjects/: README.md
DevHub/GoLand/: main.go  main_test.go
DevHub/Naming/: naming.md
DevHub/ProjectLayout/GoLand/: go.mod
DevHub/project_code/: README.md
DevHub/project_code/project_goland/: go.mod
Kamakura/DevHub/Naming/: naming.md
Kamakura/WeChatPost/: 2023-07-16.md
Kamakura/publish_post/: 2023-11-06.md  2023-11-10.md  2023-11-11.md  2023-11-12.md  2023-11-15.md  2023-11-16.md  2023-11-18.md  2023-11-24.md  2023-11-26.md
Kamakura/publish_post/2023/: 2023-11-05.md  2023-11-06.md  2023-11-08.md  2023-11-15.md  2023-11-16.md  2023-11-17.md  2023-11-19.md  2023-11-22.md  2023-11-27.md  2023-11-29.md
Kamakura/workspace/project_build/example_bazel_01/: .gitignore  BUILD.bazel  WORKSPACE  hello_world.js  main.go
Kamakura/workspace/project_build/example_bazel_02/: BUILD.bazel  WORKSPACE  go.mod  main.go
Kamakura/workspace/project_build/example_bazel_02/util/: greeting.go
Kamakura/workspace/project_build/example_bazel_03/: .gitignore  BUILD.bazel  WORKSPACE  coverage.out  deps.bzl  go.mod  go.sum
Kamakura/workspace/project_build/example_bazel_03/cmd/myapp/: BUILD.bazel  main.go
Kamakura/workspace/project_build/example_bazel_03/coverage_report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
Kamakura/workspace/project_build/example_bazel_03/coverage_report/calculator/pkg/calculator/: calculator.go.func-c.html  calculator.go.func.html  calculator.go.gcov.html  index-sort-f.html  index-sort-l.html  index.html
Kamakura/workspace/project_build/example_bazel_03/pkg/calculator/: BUILD.bazel  calculator.go  calculator_test.go
Production_Tools/vim_/: runtime.cc
Programmer/ARM/: README.md
Programmer/Aosp/: flash-devices.sh
Programmer/Programming_Language/: README.md
Programmer/Programming_Language/cpp/perfetto_test/: CMakeLists.txt
Programmer/Programming_Language/cpp/perfetto_test/src/: main.cpp
Programmer/Programming_Language/cpp/perfetto_test/src/trace_processor/: trace_processor_context.cpp  trace_processor_context.h
Programmer/Programming_Language/cpp/perfetto_test/src/trace_processor/storage/: trace_storage.cpp  trace_storage.h
Programmer/node/: hello.js  input.txt  package-lock.json
Programmer/protobuf/: addressbook.pb.h  hello.proto  mq_message.proto
Programming_Language/shell/: envsetup.sh
Programming_Language/type_script/: basic.js  basic.ts  hello.js  hello.ts
Programming_Language/wasm/: main.wasm
Tools/: fstab
Tools/oh_my_zsh/: zshrc.mac  zshrc.ubuntu
Tools/vim_/: runtime.h
WeChatPost/: 2023-07.md  2023-10-30.md
Work_Record/: README.md
iOS/MyPlayground.playground/: Contents.swift
(+383 files in other folders)
