load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/barnett-yuxiang/Evernote/Kamakura/workspace/project_build/example_bazel_03
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
